--- a/WeatherApplication/MainWindow.xaml
+++ b/WeatherApplication/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Margin="51,48,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="227" Height="28" FontSize="16px"/>
-
-
+        <TextBox Name="locationTextBox" HorizontalAlignment="Left" Margin="51,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="227" Height="28" FontSize="16px"/>
+        <Button Name="enterButton" Content="Enter" HorizontalAlignment="Left" Margin="297,48,0,0" VerticalAlignment="Top" Height="28" Width="59" Click="enterButton_Click"/>
+        <TextBlock Name="weatherInfoText" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="51,110,0,0" Width="410" Height="180" />
     </Grid>
 </Window>
